--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.2.4"
+    "@actions/core": "^1.2.4",
+    "@iarna/toml": "2.2.5"
   },
   "devDependencies": {
     "@types/jest": "^26.0.7",
